--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,11 @@
 .about_img{
     height: 670px;
 }
+.slider_img{
+
+    height: 600px;
+    width: 100%;
+}
  
  
 
@@ -118,6 +123,18 @@
    .about_main{
         height: 320px !important;
     }
+    .slider_img{
+
+        height: 600px;
+        width: 100%;
+    }
+    .crd_img{
+        height: 335px;
+    }
+    .slide_txt{
+        font-size: 20px !important;
+    }
+   
 }
 /* ===============================================
     General
